prevent white flickering when the homescreen is loaded

--- a/apps/homescreen/style/homescreen.css
+++ b/apps/homescreen/style/homescreen.css
@@ -369,10 +369,9 @@ iframe.landscape-secondary {
   width: 100%;
 }
 
-/* localization */
-body.hidden * {
-  visibility: hidden;
-}
+/*
+ * Localization: RTL layout
+ */
 
 *[dir=rtl] .page {
   left: auto;
